Update RegisterRoutes and test AuthenticationFilter